add route for update password
