# controllers/users/updateUser.js
@@ -1,5 +1,6 @@
 const cloudinary = require("cloudinary").v2;
 const fs = require("fs/promises");
+const bcrypt = require("bcrypt");
 const { User } = require("../../models/user");
 
 const updateUserById = async (req, res) => {
@@ -20,6 +21,7 @@ const updateUserById = async (req, res) => {
     favoriteNotices: result.favoriteNotices,
   });
 };
+
 const editAvatar = async (req, res) => {
   const { _id } = req.user;
   const { path: tempUpload } = req.file;
@@ -32,7 +34,28 @@ const editAvatar = async (req, res) => {
   });
 };
 
+const updatePassword = async (req, res) => {
+  const { _id } = req.user;
+  const { password, newPassword } = req.body;
+
+  const user = await User.findById(_id);
+  if (!user) {
+    throw HttpError(400, "Not found");
+  }
+
+  const passwordCompare = await bcrypt.compare(password, user.password);
+  if (!passwordCompare) {
+    throw HttpError(400, "Password is wrong");
+  }
+
+  const hashPassword = await bcrypt.hash(newPassword, 10);
+  await User.findByIdAndUpdate(_id, { password: hashPassword });
+
+  res.json({ message: "Password updated successfully" });
+};
+
 module.exports = {
   updateUserById,
   editAvatar,
+  updatePassword,
 };
